feat: update content and add Aliytics

--- a/content/docs/archive/2024-6.mdx
+++ b/content/docs/archive/2024-6.mdx
@@ -49,3 +49,7 @@ Best practices for authentication in Modern Next.js and React: **Server Componen
 
 <CardBottom author="Delba de Oliveira - Software Engineer at Vercel" href="https://www.youtube.com/watch?v=N_sUsq_y10U&ab_channel=Delba" />
 
+### Deploy without breaking existing apps
+Learn how to prevent version skew with Vercel, through a demo of a Next.js application that is being frequently deployed while being accessed from multiple clients.
+
+<CardBottom author="Lee Rob -  VP of Product at Vercel" href="https://www.youtube.com/watch?v=99U78rS1LeQ&ab_channel=Vercel" />
