feat: update content

--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -9,7 +9,18 @@ The latest Next.js news, tutorials, and best practices
 
 ## ARTICLES
 
+## Security advice for self-hosting Next.js in Docker
+Learn how to improve the security of your self-hosted Next.js applications. This guide covers Docker container image best practices, secret management, vulnerability mitigation, and more, so your Next.js projects are better protected from threats.
+
+<CardBottom author="DAVID MYTTON - Arcjet" href="https://blog.arcjet.com/security-advice-for-self-hosting-next-js-in-docker" />
+
+---
 ## VIDEOS
+
+### Caching in NextJs ft Delba Oliveira from Vercel
+caching in NextJs with Delba Oliveira, developer advocate at Vercel, and the beautiful mind behind NextJs documentation.
+
+<CardBottom author="Hamed Bahram - Youtube" href="https://www.youtube.com/watch?v=DFwLGLmLuFg&t=644s&ab_channel=HamedBahram" />
 
 ### NextJS 'use server' Trap (Accidentally Leaking Data)
 If you care about security for your NextJS app, stop using top level "use server"  - it's way too easy to leak data
