--- a/content/docs/archive/2024-6.mdx
+++ b/content/docs/archive/2024-6.mdx
@@ -3,53 +3,15 @@ title: June 2024
 discription: Curated list of articles & videos for June 2024
 ---
 
-import { CardBottom } from '../../../components/card-bottom';
+import { ArticlesList } from '@/components/articles-list';
+import list from "@/constant/archive/2024-6.json"
 
 The latest Next.js news, tutorials, and best practices for **June 2024**.
 
 ## ARTICLES
+
+<ArticlesList list={list} filterBy="article"/>
+
 ---
-
-
-### Data Fetching Patterns in SPA
-When a single-page application needs to fetch data from a remote source, it needs to do so while remaining responsive and providing feedback to the user during an often slow query. Five patterns help with this.
-
-<CardBottom author="Juntao QIU - Software Engineer at Atlassian" href="https://martinfowler.com/articles/data-fetch-spa.html" />
-
-
-### Cleaner components with useSuspenseQuery
-When a single-page application needs to fetch data from a remote source, it needs to do so while remaining responsive and providing feedback to the user during an often slow query. Five patterns help with this.
-
-<CardBottom author="Juntao QIU - Software Engineer at Atlassian" href="https://martinfowler.com/articles/data-fetch-spa.html" />
-
-### Structured logging for Next.js
-Using the Pino logging library to add structured logging to Next.js. How to set up logging to JSON for Next.js.
-
-
-<CardBottom author="DAVID MYTTON" href="https://blog.arcjet.com/structured-logging-in-json-for-next-js/" />
-
-
-
 ## VIDEOS
----
-
-### NextJS 'use server' Trap (Accidentally Leaking Data)
-If you care about security for your NextJS app, stop using top level "use server"  - it's way too easy to leak data
-
-<CardBottom author="Jolly Coding - Youtube" href="https://www.youtube.com/watch?v=yBEHKoaoZpY&ab_channel=JollyCoding" />
-
-### How To Add Page Transitions To NextJS 14
-flexible page transitions with the NextJS 14 app router. We'll do this without any fancy animation framework tricks.
-
-<CardBottom author="Tom Is Loading - Youtube" href="https://www.youtube.com/watch?v=fx6KMItwJAw&ab_channel=TomIsLoading" />
-
-
-### Authentication (Best Practices)
-Best practices for authentication in Modern Next.js and React: **Server Components**, **Server Actions**, **Middleware**.
-
-<CardBottom author="Delba de Oliveira - Software Engineer at Vercel" href="https://www.youtube.com/watch?v=N_sUsq_y10U&ab_channel=Delba" />
-
-### Deploy without breaking existing apps
-Learn how to prevent version skew with Vercel, through a demo of a Next.js application that is being frequently deployed while being accessed from multiple clients.
-
-<CardBottom author="Lee Rob -  VP of Product at Vercel" href="https://www.youtube.com/watch?v=99U78rS1LeQ&ab_channel=Vercel" />
+<ArticlesList list={list} filterBy="youtube"/>
