feat: update content

--- a/content/docs/recommended.mdx
+++ b/content/docs/recommended.mdx
@@ -7,6 +7,8 @@ import { ArticlesList } from "@/components/articles-list"
 import recommended from "@/constant/recommended.json"
 
 
-## Recommended
+## 📄 Recommended Articles
+
+Dive into a handpicked collection of articles designed to make your Next.js application more secure, perform faster, and become more resilient.
 
 <ArticlesList list={recommended} filterBy="article" />
