--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -9,8 +9,8 @@ import latest from "@/constant/latest.json"
 
 The latest Next.js news, tutorials, and best practices
 
-## Articles
-<ArticlesList list={latest} filterBy="article" />
-
-## Videos
+## ▶️ Videos
 <ArticlesList list={latest} filterBy="youtube" />
+
+## 📄Articles
+<ArticlesList list={latest} filterBy="article" />
