feat: migrate articles to Sanity

--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -10,7 +10,7 @@ import latest from "@/constant/latest.json"
 The latest Next.js news, tutorials, and best practices
 
 ## ▶️ Videos
-<ArticlesList list={latest} filterBy="youtube" />
+<ArticlesList filterBy="youtube" />
 
 ## 📄Articles
-<ArticlesList list={latest} filterBy="article" />
+<ArticlesList filterBy="article" />
