--- a/content/docs/real-world-apps.mdx
+++ b/content/docs/real-world-apps.mdx
@@ -5,6 +5,6 @@ description: Real world apps built with Nextjs and open source
 
 import { ItemsList } from "@/components/List"
 
-Curated real-world apps built with Nextjs, check the source code and take your experience to the next level.
+Understand how large scale web apps are structured by studying these Next.js projects.
 
 <ItemsList category="real-world-apps" />
