--- a/content/docs/recommended.mdx
+++ b/content/docs/recommended.mdx
@@ -11,4 +11,4 @@ import recommended from "@/constant/recommended.json"
 
 Dive into a handpicked collection of articles designed to make your Next.js application more secure, perform faster, and become more resilient.
 
-<ArticlesList list={recommended} filterBy="article" />
+<ArticlesList recommended filterBy="article" />
