feat: update the recommended page

--- a/content/docs/recommended.mdx
+++ b/content/docs/recommended.mdx
@@ -4,11 +4,14 @@ description: The recommended articles and videos from the community.
 ---
 
 import { ArticlesList } from "@/components/articles-list"
-import recommended from "@/constant/recommended.json"
+
+Dive into a handpicked collection of articles designed to make your Next.js application more secure, perform faster, and become more resilient.
+
+## 📹 Recommended Videos
+
+<ArticlesList recommended filterBy="youtube" />
 
 
 ## 📄 Recommended Articles
-
-Dive into a handpicked collection of articles designed to make your Next.js application more secure, perform faster, and become more resilient.
 
 <ArticlesList recommended filterBy="article" />
