feat: add latest repos section to latest.mdx

--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -4,6 +4,7 @@ description: The latest articles and videos from the community.
 ---
 
 import { ArticlesList } from "@/components/articles-list"
+import { LatestRepos } from "@/components/latest-repos"
 
 
 The latest Next.js news, tutorials, and best practices
@@ -13,3 +14,6 @@ The latest Next.js news, tutorials, and best practices
 
 ## 📄Articles
 <ArticlesList filterBy="article" />
+
+## 🛠️ Recently added OS projects & tools
+<LatestRepos />
