feat: imporve code and h1

--- a/content/docs/jobs.mdx
+++ b/content/docs/jobs.mdx
@@ -1,9 +1,8 @@
 ---
 title: Jobs
-description: Awesome job opportunities for Professional Nextjs devs.
+description: Fresh job opportunities only for Nextjs and React developers.
 ---
 
-import { JobPosts } from "@/components/job-posts"
+import { JobPostsSection } from "@/components/job-posts-section"
 
-
-<JobPosts />
+<JobPostsSection />
