style: reduce width

--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -5,8 +5,9 @@ description: The latest articles and videos from the community.
 
 import { ArticlesList } from "@/components/articles-list"
 import { LatestRepos } from "@/components/latest-repos"
+import { Sponsor } from "@/components/sponsor"
 
-
+<Sponsor />
 The latest Next.js news, tutorials, and best practices
 
 ## ▶️ Videos
