feat: update pricing

--- a/content/docs/advertise.mdx
+++ b/content/docs/advertise.mdx
@@ -30,15 +30,15 @@ The following stats are for the last 30 days and it is updated every 2 hours.
 > "It is amazing. I like it! also, may I know how did you implemented the global search? Any resources? Im planning to add it on our dashboard. Thanks" - Reddit user
 
 ## 🌍 Target audience
-Nextradar is providing fresh and high-quality content around Nextjs framework. Our audience is mainly Nextjs developers, and React developers.
+Nextradar is providing fresh and high-quality content around Nextjs framework. Our audience is mainly Nextjs developers, and React developers. Visitors come from all around the world, with the majority from the United States, India, the United Kingdom and Germany.
 
 ## 📍Placement options
-Currently only "latest" page is available for ads. The ad will be displayed on the top of the page and in the middle of the page after the video section.
+Currently only "latest" page (most visited) is available for ads. The ad will be displayed on the top of the page and in the middle of the page after the video section.
 
 | Placement | Page | Price per Week | Price per 2 Weeks |
 |-----------|------|----------------|-------------------|
-| 1st place | latest | $1500 | $2100 |
-| 2nd place | latest | $1000 | $1500 |
+| 1st place | latest | $200 | $200 |
+| 2nd place | latest | $100 | $150 |
 
 ## 📰 Good fit ads
 - Reach Nextjs developers
