feat: update the advertise page

--- a/content/docs/advertise.mdx
+++ b/content/docs/advertise.mdx
@@ -12,33 +12,26 @@ Reach a qualified audience of Nextjs/React developers with an ad in Nextrad
 
 ## Get in touch
 
-By email at [advertise@nextradar.dev](mailto:advertise@nextradar.dev)
+By email at [advertise@nextradar.dev](mailto:advertise@nextradar.dev) or Sponsor us on [GitHub](https://github.com/sponsors/Ali-Hussein-dev)
 
 
 ## 📊 Stats
-The following stats are for the last 30 days and it is updated every 2 hours.
+The following stats are for the last 30 days, it is updated every 2 hours. A live preview of the stats can be shared upon request.
 <AdStats />
 
 ## 🗣️ Testimonials
 
 > "Great idea! I would love to sign up for a newsletter or roundup of new additions." - Reddit user
 
+> "Wow! Thank you so much. 😍 This website has pretty good resources links along with a job section and OSS project resources as well! 🎉" - Reddit user
+
+> It is amazing. I like it! also, may I know how did you implemented the global search? Any resources? Im planning to add it on our dashboard. Thanks - Reddit user
+
 > "Its really helpful. Thanks for sharing" - Reddit user
 
-> "u'r awesome, thanks" - Reddit user
-
-> "It is amazing. I like it! also, may I know how did you implemented the global search? Any resources? Im planning to add it on our dashboard. Thanks" - Reddit user
-
 ## 🌍 Target audience
-Nextradar is providing fresh and high-quality content around Nextjs framework. Our audience is mainly Nextjs developers, and React developers. Visitors come from all around the world, with the majority from the United States, India, the United Kingdom and Germany.
+Nextradar is providing fresh and high-quality content around Nextjs framework, React, and Vercel. Our audience is mainly Nextjs, and React developers. Visitors come from all around the world, with the majority from the United States, India, the United Kingdom and Germany.
 
-## 📍Placement options
-Currently only "latest" page (most visited) is available for ads. The ad will be displayed on the top of the page and in the middle of the page after the video section.
-
-| Placement | Page | Price per Week | Price per 2 Weeks |
-|-----------|------|----------------|-------------------|
-| 1st place | latest | $200 | $310 |
-| 2nd place | latest | $100 | $150 |
 
 ## 📰 Good fit ads
 - Reach Nextjs developers
