feat: update learn page content

--- a/content/docs/learn.mdx
+++ b/content/docs/learn.mdx
@@ -1,6 +1,6 @@
 ---
-title: Learn
-description: Resources for learning and using the Next framework.
+title: Courses
+description: Hand-picked list of courses, and tutorials to learn Next.js framework.
 ---
 
 import { ItemsList } from "@/components/List"
