feat: rename a page

--- a/content/docs/recommendations.mdx
+++ b/content/docs/recommendations.mdx
@@ -1,6 +1,6 @@
 ---
-title: Recommended
-description: The recommended articles and videos from the community.
+title: Recommendations
+description: A list recommended tutorials, articles and videos from the community.
 ---
 
 import { ArticlesList } from "@/components/articles-list"
