feat: mix changes

--- a/content/docs/recommendations.mdx
+++ b/content/docs/recommendations.mdx
@@ -4,13 +4,17 @@ description: A list recommended tutorials, articles and videos from the communit
 ---
 
 import { ArticlesList } from "@/components/articles-list"
+import { ItemsList } from "@/components/List"
 
 
-## 📹 Recommended Videos
+## ▶️ Recommended Videos
 
 <ArticlesList recommended filterBy="youtube" />
-
 
 ## 📄 Recommended Articles
 
 <ArticlesList recommended filterBy="article" />
+
+## 🛠️ Recommended Tools
+
+<ItemsList recommended category="Tools" />
