--- a/content/docs/integrations/testing.mdx
+++ b/content/docs/integrations/testing.mdx
@@ -5,7 +5,16 @@ description: An overview of the lib that works with Next.js
 
 import { IntegrationSection } from "@/components/integration-section"
 import categories from "@/constants/categories.json"
+import { ExpandableCard } from "@/components/ui/expandable-card"
 
-## Overview
+<ExpandableCard className="md:px-6 border-dashed">
+  <h2 className="text-2xl font-bold mb-0 mt-2">Testing your Next.js Website</h2>
+  <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
+  In React and Next.js, various testing types are essential for ensuring application reliability. Unit testing focuses on individual code blocks, like functions and components, in isolation. Component testing hones in on React components specifically, assessing their rendering, props interactions, and user event responses. 
+  
+  Integration testing evaluates the interaction of multiple units, including components, hooks, and functions. End-to-End (E2E) Testing simulates real user scenarios to verify complete user flows, such as signups, in a production-like setting. Snapshot testing captures component output and compares it with stored snapshots to flag unexpected changes. While async Server Components are new and may not be fully supported by all tools, it is advisable to lean towards End-to-End Testing instead of Unit Testing for these components.
+</div>
+</ExpandableCard>
 
+<br />
 <IntegrationSection categoryId={categories.testing.id} />
