--- a/content/docs/real-world-apps.mdx
+++ b/content/docs/real-world-apps.mdx
@@ -1,10 +1,33 @@
 ---
-title: Real-world apps
+title: OS Projects
 description: Real world apps built with Nextjs and open source
 ---
 
 import { ItemsList } from "@/components/List"
+import { ExpandableCard } from "@/components/ui/expandable-card"
 
-Understand how large scale web apps are structured by studying these Next.js projects.
+<ExpandableCard className="md:px-6 border-dashed">
+  <h2 className="text-2xl font-bold mb-0 mt-2">Top Open-source Projects built with Next.js</h2>
+  <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
+  If you’re a seasoned developer wanting to polish your coding skills or just starting out and keen to learn the basics. his collection has it all—from intermediate projects to complex enterprise Next.js apps. Diving into open-source projects is a great way to practice and sharpen your coding skills.
+
+  Explore a handy list of top open-source projects that reveal important lessons in web development.
+   
+  Here is what you can learn from open-source projects built with Next.js:
+
+  - Handling SEO in Next.js 
+  - Handling Authentication in real-world apps
+  - Architecting applications with Next.js
+  - Managing state and data fetching in Next.js
+  - How to use Next.js features like SSG, ISR, SSR, and API routes
+  - Use the Next.js built-in optimizations and performance enhancements.
+  - Adopting best practices and design patterns
+  - Integrating third-party services and tools, and how to deploy your applications effectively.
+  - Reading and understanding code written by other developers.
+
+  </div>
+</ExpandableCard>
+
+<br />
 
 <ItemsList category="real-world-apps" />
