refactor: change file name

--- a/content/docs/templates.mdx
+++ b/content/docs/templates.mdx
@@ -3,6 +3,6 @@ title: Templates
 description: Curated premium and open-source Next.js starters.
 ---
 
-import { StartersSection } from "@/components/starters-section"
+import { TemplatesSection } from "@/components/templates-section"
 
-<StartersSection />
+<TemplatesSection />
