feat: add newsletter

--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -7,6 +7,7 @@ import { ArticlesList } from "@/components/articles-list"
 import { LatestRepos } from "@/components/latest-repos"
 import { Sponsor } from "@/components/sponsor"
 import { ExpandableCard } from "@/components/ui/expandable-card"
+import { Newsletter2 } from "@/components/newsletter"
 
 <Sponsor />
 
@@ -23,6 +24,7 @@ import { ExpandableCard } from "@/components/ui/expandable-card"
   I personally vet each resource, ensuring you get direct access to the most valuable Next.js and Vercel content on the web. From official documentation updates to insightful developer blogs, this constantly updated list saves you time and keeps you informed. 
   
   It's like having a knowledgeable friend who sifts through the internet, so you don't have to. Boost your Next.js and Vercel expertise with this carefully curated gateway to top-notch resources
+  <Newsletter2 />
   </div>
 </ExpandableCard>
 ## ▶️ Videos
