--- a/content/docs/integrations/db.mdx
+++ b/content/docs/integrations/db.mdx
@@ -5,12 +5,10 @@ description: Discover the best database integrations for Next.js. Learn how to s
 
 import { DatabaseSection } from "@/components/database-section"
 import categories from "@/constants/categories.json"
-import { ExpandableCard } from "@/components/ui/expandable-card"
+import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 
 <ExpandableCard className="md:px-6 border-dashed h-full">
-  <h2 className="text-2xl font-bold mb-0 mt-2">
-      Best Databases for Next.js
-  </h2>
+  <CardHeading h2="Best Databases for Next.js" />
      <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
     Next.js is a versatile and powerful framework that can be seamlessly integrated with a wide range of databases to suit various application needs. Whether you are building a small personal project or a large-scale enterprise application, choosing the right database is crucial for performance, scalability, and reliability. 
     
