--- a/content/docs/integrations/hosting.mdx
+++ b/content/docs/integrations/hosting.mdx
@@ -3,15 +3,16 @@ title: Hosting
 description: Discover the top hosting providers for Next.js. Select the ideal platform that ensures smooth deployment and peak performance. Compare...
 ---
 
-
 import { IntegrationSection } from "@/components/integration-section"
 import categories from "@/constants/categories.json"
-import { ExpandableCard } from "@/components/ui/expandable-card"
+import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 
 <ExpandableCard className="md:px-6 border-dashed h-full">
-  <h2 className="text-2xl font-bold mb-0 mt-2">Best Next.js Hosting Providers for {new Date().getFullYear()}</h2>
-  <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
- Great hosting is key to your Next.js site's success.It affects everything speed, performance, scalability, budget, and overall user experience. So, to help you make proper decisions, we have listed the key factors to consider while hosting the Next.js app.
+<CardHeading h2={`Best Next.js Hosting Providers for ${new Date().getFullYear()}`} h3="Top Vercel Alternatives" />
+
+<div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
+
+Great hosting is key to your Next.js site's success. It affects everything speed, performance, scalability, budget, and overall user experience. So, to help you make proper decisions, we have listed the key factors to consider while hosting the Next.js app
 
 - **Pricing**: Understanding the cost structure helps manage expenses and ensure the hosting provider aligns with your budget.
 
@@ -22,11 +23,11 @@ import { ExpandableCard } from "@/components/ui/expandable-card"
 - **Performance**: Fast server speed and response time are critical for a seamless user experience. Look for hosting providers with a reputation for high-performance servers and low response times.
 
 - **CDN Integration**: CDN integration is crucial for distributing content globally, reducing latency, and ensuring faster page loads for users across different geographical locations.
-Choose a hosting provider that seamlessly integrates with CDN services.
-Confirm the coverage of the CDN network to ensure overall content distribution.
+  Choose a hosting provider that seamlessly integrates with CDN services.
+  Confirm the coverage of the CDN network to ensure overall content distribution.
 
 - **Scalable**: The ability to scale resources is crucial for handling traffic spikes and adapting the growth of your Next.js app. Evaluate the hosting provider's scalability options, including vertical and horizontal scaling. Check if the provider has a track record of effectively handling increased workloads without compromising performance.
-Serverless 
+  Serverless
 
 - **Security**: It is essential to protect your Next.js app, user data, and sensitive information from potential threats. Look for hosting providers prioritizing security measures such as SSL/TLS encryption. Check for additional security features like DDoS protection and regular security updates.
 
