--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -6,17 +6,14 @@ description: The latest articles and videos from the community.
 import { ArticlesList } from "@/components/articles-list"
 import { LatestRepos } from "@/components/latest-repos"
 import { Sponsor } from "@/components/sponsor"
-import { ExpandableCard } from "@/components/ui/expandable-card"
+import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 import { Newsletter2 } from "@/components/newsletter"
 
 <Sponsor />
 
 
 <ExpandableCard className="md:px-6 border-dashed mt-8">
-  <h2 className="text-2xl font-bold mb-0 mt-2 tracking-tight">Latest Next.js and Vercel News</h2>
-  <h3 className="mb-0 mt-0 text-zinc-600 dark:text-zinc-400 font-medium prose-p:mt-1">
-  Fresh and curated content for curious Next.js developers
-  </h3>
+  <CardHeading h2={`Latest Next.js and Vercel News`} h3={"Fresh and curated content for curious Next.js developers"} />
   <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
   
   Drowning in the sea of Next.js and Vercel information? As a solo developer, I felt overwhelmed too. That's why I created this curated collection of links to the best resources out there. No fluff, no AI-generated content – just hand-picked, quality links that cut through the noise. 
