--- a/content/docs/real-world-apps.mdx
+++ b/content/docs/real-world-apps.mdx
@@ -1,18 +1,18 @@
 ---
-title: OS Projects
-description: Real world apps built with Nextjs and open source
+title: Open-source Projects
+description: Top open-source projects built with Next.js
 ---
 
 import { ItemsList } from "@/components/List"
-import { ExpandableCard } from "@/components/ui/expandable-card"
+import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 
 <ExpandableCard className="md:px-6 border-dashed">
-  <h2 className="text-2xl font-bold mb-0 mt-2">Top Open-source Projects built with Next.js</h2>
+  <CardHeading h2="Top Open-source Projects built with Next.js"/>
   <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
   If you’re a seasoned developer wanting to polish your coding skills or just starting out and keen to learn the basics. his collection has it all—from intermediate projects to complex enterprise Next.js apps. Diving into open-source projects is a great way to practice and sharpen your coding skills.
 
-  Explore a handy list of top open-source projects that reveal important lessons in web development.
-   
+  Explore a handy list of top open-source projects that reveal important lessons about React.js and Next.js development.
+
   Here is what you can learn from open-source projects built with Next.js:
 
   - Handling SEO in Next.js 
