--- a/content/docs/recommendations.mdx
+++ b/content/docs/recommendations.mdx
@@ -6,6 +6,16 @@ description: A list recommended tutorials, articles and videos from the communit
 import { ArticlesList } from "@/components/articles-list"
 import { ItemsList } from "@/components/List"
 
+import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
+
+<ExpandableCard className="md:px-6 border-dashed">
+  <CardHeading h2="Essential Next.js Resources You Must Check Out"/>
+  <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
+    Here is a list of recommended tutorials, articles, and videos that you will need probably at some point. These resources are hand-picked to help you learn and master Next.js efficiently. 
+
+  </div>
+</ExpandableCard>
+
 
 ## ▶️ Recommended Videos
 
