--- a/content/docs/integrations/headless-cms.mdx
+++ b/content/docs/integrations/headless-cms.mdx
@@ -5,10 +5,11 @@ description: Discover the top and Best headless CMS providers for Next.js apps. 
 
 import { IntegrationSection } from "@/components/integration-section"
 import categories from "@/constants/categories.json"
-import { ExpandableCard } from "@/components/ui/expandable-card"
+import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 
 <ExpandableCard className="md:px-6 border-dashed h-full">
-  <h2 className="text-2xl font-bold mb-0 mt-2">Best Headless CMS for Next.js {new Date().getFullYear()}</h2>
+  <CardHeading h2={`Best Headless CMS for Next.js ${new Date().getFullYear()}`} />
+
   <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
   
   Discover the perfect headless CMS for your Next.js project with our comprehensive guide to the top options in {new Date().getFullYear()}. We've meticulously curated a list of cutting-edge content management systems that seamlessly integrate with Next.js, empowering developers to create lightning-fast, scalable websites. 
