feat: update adverise page

--- a/content/docs/sponsor.mdx
+++ b/content/docs/sponsor.mdx
@@ -1,10 +1,10 @@
 ---
-title: Advertise
-description: Advertise your product or service on Nextradar.
+title: Sponsor
+description: Sponsor your product or service on Nextradar.
 ---
 import { AdStats } from '@/components/ad-stats'
 
-# Advertise on Nextradar
+# Sponsor on Nextradar
 
 ---
 
@@ -12,7 +12,7 @@ Reach a qualified audience of Nextjs/React developers with an ad in Nextrad
 
 ## Get in touch
 
-By email at [advertise@nextradar.dev](mailto:advertise@nextradar.dev) or Sponsor us on [GitHub](https://github.com/sponsors/Ali-Hussein-dev)
+By email at [sponsor@nextradar.dev](mailto:sponsor@nextradar.dev) Or fill Contact form [here](https://app.rapidforms.co/p/1d0ca1)
 
 
 ## 📊 Stats
@@ -29,6 +29,12 @@ The following stats are for the last 30 days, it is updated every 12 hours. A li
 
 > "Its really helpful. Thanks for sharing" - Reddit user
 
+## 📈 Type of sponsorship
+
+- **Display Ad**: Display your product name on top of `latest` page.
+- **Premium Listing**: Get your product name on top of the list.
+
+
 ## 🌍 Target audience
 Nextradar is providing fresh and high-quality content around Nextjs framework, React, and Vercel. Our audience is mainly Nextjs, and React developers. Visitors come from all around the world, with the majority from the United States, India, the United Kingdom and Germany.
 
@@ -44,4 +50,4 @@ Nextradar is providing fresh and high-quality content around Nextjs framework, R
 
 ## 📅 Booking
 
-To book an ad, please email me at [advertise@nextradar.dev](mailto:advertise@nextradar.dev)
+To book an ad, please email me at [advertise@nextradar.dev](mailto:sponsor@nextradar.dev)
