feat: add link to sponsor page

--- a/content/docs/integrations/db.mdx
+++ b/content/docs/integrations/db.mdx
@@ -6,6 +6,8 @@ description: Discover the best database integrations for Next.js. Learn how to s
 import { DatabaseSection } from "@/components/database-section"
 import categories from "@/constants/categories.json"
 import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
+import { Promote } from "@/components/sponsor"
+
 
 <ExpandableCard className="md:px-6 border-dashed h-full">
   <CardHeading h2="Best Databases for Next.js" />
@@ -29,3 +31,8 @@ import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 
 <br />
 <DatabaseSection categoryId={categories.database.id} />
+
+
+<Promote>
+    Get more traffic to your business
+</Promote>
