--- a/content/docs/integrations/headless-cms.mdx
+++ b/content/docs/integrations/headless-cms.mdx
@@ -6,6 +6,8 @@ description: Discover the top and Best headless CMS providers for Next.js apps. 
 import { IntegrationSection } from "@/components/integration-section"
 import categories from "@/constants/categories.json"
 import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
+import { Promote } from "@/components/sponsor"
+
 
 <ExpandableCard className="md:px-6 border-dashed h-full">
   <CardHeading h2={`Best Headless CMS for Next.js ${new Date().getFullYear()}`} />
@@ -23,3 +25,9 @@ import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 
 <br />
 <IntegrationSection categoryId={categories.headlessCMS.id} />
+
+
+
+<Promote>
+    Get more traffic to your business
+</Promote>
