--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -1,6 +1,6 @@
 ---
 title: Latest
-description: The latest articles and videos from the community.
+description: Top Next.js and Vercel resources, articles, videos, and open-source projects.
 ---
 
 import { ArticlesList } from "@/components/articles-list"
@@ -8,6 +8,7 @@ import { LatestRepos } from "@/components/latest-repos"
 import { Sponsor } from "@/components/sponsor"
 import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
 import { Newsletter2 } from "@/components/newsletter"
+import { Promote } from "@/components/sponsor"
 
 <Sponsor />
 
@@ -32,3 +33,9 @@ import { Newsletter2 } from "@/components/newsletter"
 
 ## 🛠️ Recently added OS projects & tools
 <LatestRepos />
+
+
+
+<Promote>
+    Get more traffic to your business
+</Promote>
