--- a/content/docs/templates.mdx
+++ b/content/docs/templates.mdx
@@ -4,5 +4,10 @@ description: Curated premium and open-source Next.js starters.
 ---
 
 import { TemplatesSection } from "@/components/templates-section"
+import { Promote } from "@/components/sponsor"
 
 <TemplatesSection />
+
+<Promote>
+    Get more traffic to your template business
+</Promote>
