feat: tweak latest page

--- a/content/docs/latest.mdx
+++ b/content/docs/latest.mdx
@@ -4,6 +4,7 @@ description: Top Next.js and Vercel resources, articles, videos, and open-source
 ---
 
 import { ArticlesList } from "@/components/articles-list"
+import { Feed } from "@/components/feed"
 import { LatestRepos } from "@/components/latest-repos"
 import { Sponsor } from "@/components/sponsor"
 import { ExpandableCard, CardHeading } from "@/components/ui/expandable-card"
@@ -12,30 +13,11 @@ import { Promote } from "@/components/sponsor"
 
 <Sponsor />
 
-
-<ExpandableCard className="md:px-6 border-dashed mt-8">
-  <CardHeading h2={`Latest Next.js and Vercel News`} h3={"Fresh and curated content for curious Next.js developers"} />
-  <div className="text-zinc-600 dark:text-zinc-400 prose-p:mt-2">
-  
-  Drowning in the sea of Next.js and Vercel information? As a solo developer, I felt overwhelmed too. That's why I created this curated collection of links to the best resources out there. No fluff, no AI-generated content – just hand-picked, quality links that cut through the noise. 
-  
-  I personally vet each resource, ensuring you get direct access to the most valuable Next.js and Vercel content on the web. From official documentation updates to insightful developer blogs, this constantly updated list saves you time and keeps you informed. 
-  
-  It's like having a knowledgeable friend who sifts through the internet, so you don't have to. Boost your Next.js and Vercel expertise with this carefully curated gateway to top-notch resources
-  <Newsletter2 />
-  </div>
-</ExpandableCard>
-## ▶️ Videos
-<ArticlesList filterBy="youtube" />
-
-## 📄Articles
-<ArticlesList filterBy="article" />
-
-## 🛠️ Recently added OS projects & tools
-<LatestRepos />
+<br />
+<Feed />
 
 
-
+<br/>
 <Promote>
     Get more traffic to your business
 </Promote>
