feat: udpate archive pages

--- a/content/docs/archive/2024-7.mdx
+++ b/content/docs/archive/2024-7.mdx
@@ -1,6 +1,6 @@
 ---
-title: July 2024
-description: Curated list of articles & videos for July 2024
+title: July
+description: Top Next.js tutorials and videos for July 2024
 ---
 
 import { ArticlesList } from "@/components/articles-list"
