--- a/content/docs/archive/2024-8.mdx
+++ b/content/docs/archive/2024-8.mdx
@@ -1,6 +1,6 @@
 ---
-title: August 2024
-description: Curated list of articles & videos for August 2024
+title: August
+description: Top Next.js tutorials and videos for August 2024
 ---
 
 import { ArticlesList } from "@/components/articles-list"
