feat: tweak the jobs list page

--- a/content/docs/jobs.mdx
+++ b/content/docs/jobs.mdx
@@ -1,6 +1,6 @@
 ---
-title: Jobs
-description: Fresh job opportunities only for Nextjs and React developers.
+title: Remote Jobs
+description: Next.js jobs for qualified developers.
 ---
 
 import { JobPostsSection } from "@/components/job-posts-section"
