feat: add filter function

--- a/content/docs/tools.mdx
+++ b/content/docs/tools.mdx
@@ -4,7 +4,12 @@ description: Tools list for Next.js
 ---
 
 import { ItemsList } from "@/components/List"
+import { ToolsSection  } from "@/components/tools-section"
+import { ExpandableCard  } from "@/components/ui/expandable-card"
 
-A list of tools and Utilities to build successful projects with Nextjs
 
-<ItemsList category="Tools" />
+<div>
+    Discover top tools and utilities used with Next.js to help you build faster and better.
+</div>
+
+<ToolsSection category="Tools" />
