feat: small updates

--- a/content/docs/sponsor.mdx
+++ b/content/docs/sponsor.mdx
@@ -50,4 +50,4 @@ Nextradar is providing fresh and high-quality content around Nextjs framework, R
 
 ## 📅 Booking
 
-To book an ad, please email me at [advertise@nextradar.dev](mailto:sponsor@nextradar.dev)
+To book an ad, please email me at [sponsor@nextradar.dev](mailto:sponsor@nextradar.dev)
